test-expected/large/htmlcommons/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: dkrhttpproxy
    foo.com/duversion: 1.5.42-20190924.1569321426630
    foo.com/version: 1.5.42
  labels:
    app.kubernetes.io/name: htmlcommons
    helm.sh/chart: htmlcommons-1.5.42
  name: htmlcommons
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  selector:
    app.kubernetes.io/name: htmlcommons
  type: ClusterIP
